--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Bruno Gabriel - Portfolio</title>
-    
- 
+    <title>Bruno Gabriel 👨‍💻 - Portfólio</title>
+    <meta name="description" content="Este é o meu portfólio! ;)">
+    <meta name="keywords" content="portfólio, programador, desenvolvedor, desenvolvedor web, desenvolvedor software, web, software, full stack, desenvolvedor full stack, cibersegurança, cibersecurity, sistemas">
+
     <link href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 
